samples/_failures_safe/1761298213_e3e858_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bccc943c.c: In function ‘main’:
./samples/SAFE/__tmp_bccc943c.c:152:11: error: expected ‘;’ at end of input
  152 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_bccc943c.c:152:5: error: expected declaration or statement at end of input
  152 |     printf
      |     ^~~~~~
